--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/eb7e37fb53.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <link rel="stylesheet" href="arch.css">
+    <link rel="stylesheet" href="style.css">
 <div class="section1">
     <div class="logo-main">
      <img class="logo" src="ARCH-Secondary-Logo-300.png" alt="">
